# QQuant

./: .dockerignore  .gitignore  Dockerfile  README.md  Roadmap.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  trading_system_plan.md  verify_implementation.py
.github/workflows/: bootstrap-server.yml  ci.yml  deploy.yml  verify-server.yml
config/: secrets.env.example
dashboard/: app.py
deploy/: crontab.template  run_job.sh  setup.sh
doc/: operate-server-via-actions.md
scripts/: daily_report.py  download_data.py  edge_probe.py  run_backtest.py  run_oos.py  validate_data.py
src/: backtester.py  config.py  data_cleaner.py  data_loader.py  indicators.py  monitor.py  portfolio_manager.py  report_generator.py  risk_engine.py  signal_engine.py  signal_ranker.py  universe_filter.py
src/qquant/: __init__.py  main.py
src/qquant/backtest/: __init__.py  engine.py  metrics.py  portfolio.py
src/qquant/data/: __init__.py  cache.py  cleaner.py  manager.py
src/qquant/risk/: __init__.py  rules.py
src/qquant/strategy/: __init__.py  base.py  editor.py  generator.py
src/qquant/ui/: __init__.py  main_window.py  main_window_simple.py
tests/: test_basic.py  test_indicators.py  test_risk_engine.py  test_signal_engine.py
